--- a/workflows/workflow.yml
+++ b/workflows/workflow.yml
@@ -1,29 +1,37 @@
-name: Build PDF from Markdown
+name: Render PDF
 
 on:
   push:
-    branches: [ main ]  # oder den Branch, den ihr verwendet
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
+  workflow_dispatch:
 
 jobs:
-  build:
+  render:
     runs-on: ubuntu-latest
+
     steps:
       # Repository auschecken
-      - uses: actions/checkout@v3
+      - name: Checkout Repository
+        uses: actions/checkout@v4
 
-      # Installiere Pandoc und LaTeX
-      - name: Install pandoc and TeX Live
+      # Quarto installieren
+      - name: Install Quarto
         run: |
           sudo apt-get update
-          sudo apt-get install -y pandoc texlive-latex-base texlive-latex-extra
+          sudo apt-get install -y wget
+          # Lade das neueste Quarto .deb-Paket herunter und installiere es
+          wget https://github.com/quarto-dev/quarto-cli/releases/latest/download/quarto-linux-amd64.deb
+          sudo dpkg -i quarto-linux-amd64.deb
 
-      # Konvertiere deine Markdown-Datei in eine PDF
-      - name: Convert Markdown to PDF
-        run: pandoc README.md -o output.pdf
+      # Quarto-Dokument in PDF rendern
+      - name: Render Quarto document to PDF
+        run: quarto render document.qmd --to pdf
 
-      # (Optional) Lade die PDF als Artefakt hoch
+      # Das erzeugte PDF als Artefakt hochladen
       - name: Upload PDF artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
-          name: pdf
-          path: output.pdf
+          name: rendered-pdf
+          path: document.pdf
