--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -16,18 +16,22 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      # Quarto installieren (hier wird der offizielle Quarto Action genutzt)
-      - name: Setup Quarto
-        uses: quarto-dev/quarto-action@v2
+      # Quarto installieren
+      - name: Install Quarto
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y wget
+          # Lade das neueste Quarto .deb-Paket herunter und installiere es
+          wget https://github.com/quarto-dev/quarto-cli/releases/latest/download/quarto-linux-amd64.deb
+          sudo dpkg -i quarto-linux-amd64.deb
 
       # Quarto-Dokument in PDF rendern
-      - name: Render Quarto to PDF
+      - name: Render Quarto document to PDF
         run: quarto render document.qmd --to pdf
 
-      # (Optional) Das generierte PDF als Artefakt hochladen,
-      # damit es über die GitHub Actions Oberfläche heruntergeladen werden kann
+      # Das erzeugte PDF als Artefakt hochladen
       - name: Upload PDF artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: rendered-pdf
           path: document.pdf
