--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -12,24 +12,20 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Repository auschecken
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      # Quarto installieren
       - name: Install Quarto
         run: |
           sudo apt-get update
           sudo apt-get install -y wget
-          # Lade das neueste Quarto .deb-Paket herunter und installiere es
-          wget https://github.com/quarto-dev/quarto-cli/releases/latest/download/quarto-linux-amd64.deb
-          sudo dpkg -i quarto-linux-amd64.deb
+          # Lade das Quarto-Paket in der Version 1.3.359 herunter – passe diese Version an, falls erforderlich
+          wget https://github.com/quarto-dev/quarto-cli/releases/download/v1.3.359/quarto-1.3.359-linux-amd64.deb
+          sudo dpkg -i quarto-1.3.359-linux-amd64.deb
 
-      # Quarto-Dokument in PDF rendern
       - name: Render Quarto document to PDF
         run: quarto render document.qmd --to pdf
 
-      # Das erzeugte PDF als Artefakt hochladen
       - name: Upload PDF artifact
         uses: actions/upload-artifact@v4
         with:
