--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -19,8 +19,8 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y wget
-          wget https://github.com/quarto-dev/quarto-cli/releases/download/v1.6.40/changelog.md
-          sudo dpkg -i quarto-1.3.359-linux-amd64.deb
+          wget https://github.com/quarto-dev/quarto-cli/releases/download/v1.6.40/quarto-1.6.40-linux-amd64.deb
+          sudo dpkg -i quarto-1.6.40-linux-amd64.deb
 
       - name: Render Quarto document to PDF
         run: quarto render document.qmd --to pdf
