--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -25,6 +25,9 @@ jobs:
       - name: Render Quarto document to PDF
         run: quarto render iv_in_python.md --to pdf
 
+      - name: Install TinyTeX
+        run: quarto install tinytex
+
       - name: Upload PDF artifact
         uses: actions/upload-artifact@v4
         with:
